src/test/deca/context/invalid/test_cast_void.deca
// Description:
//    Programme testant un cast incompatible
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
// Resultats:
//    test_context : erreur ligne 23 : Cannot cast a void type
class A  {
	int x ;
	float y;
	int getX(){
		return x;
	}
	float getY(){
		string s ;
		return x;
	}
}
{
	A a = new A();
	int c = 5;
	float b = (void)(a);
	println("hello");
	
}
